# rainforest-homelab

./: .gitignore  .gitmodules  .mcp.json  .terraform.lock.hcl  BACKUP_STRATEGY.md  CLAUDE.md  DOCKER_MCP_GATEWAY_SETUP.md  DOCKER_MCP_SOLUTION.md  DOCKER_MCP_TROUBLESHOOTING.md  GEMINI.md  README.md  SECURITY.md  SOLUTION_SUMMARY.md  TERRAFORM_VS_ANSIBLE.md  WETTY-IMPLEMENTATION.md  WETTY-USAGE.md  WETTY_SETUP.md  locals.tf  main.tf  mcpo-config.json  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
ansible/: README.md  mcp-gateway-playbook.yml  requirements.yml
automation/: README.md  UPGRADE_SOP.md  ansible.cfg  docker-mcp-gateway.yml  requirements.yml  ttyd-setup.yml  upgrade  upgrade.yml
automation/group_vars/: all.yml
automation/templates/: ttyd.plist.j2
comfyui/: README.md  pyproject.toml
configs/calibre-web/: .key  app.db  calibre-web.log.1
docs/: QUICK-START.md  mcp-gateway-setup.md  minio-usage.md  n8n-integration-test.md
examples/: qdrant-basic-usage.py  qdrant-config-example.tf  service-database-integration.tf
modules/calibre-web/: main.tf  outputs.tf  variables.tf
modules/cloudflare-tunnel/: README.md  main.tf  outputs.tf  variables.tf  (+1 more)
modules/comfyui-adapter/app/: .gitignore  main.py  pyproject.toml  workflow.json
modules/comfyui-adapter/app/comfyui_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/comfyui-adapter/app/tests/: test_main.py
modules/whisper/app/: main.py  pyproject.toml
scripts/: register-oauth-client.sh
(+132 files in other folders)
